--- a/app/views/home/confirmed.html.erb
+++ b/app/views/home/confirmed.html.erb
@@ -15,7 +15,7 @@
       <td><%= actual_service['countryRegion']%></td>
       <td><%= actual_service['provinceState'] %></td>
       <td><%= actual_service['confirmed']%></td>
-      <td><%= (actual_service['lastUpdate'].to_i)/1000%></td>
+      <td><%= Time.at((actual_service['lastUpdate'].to_i/1000)).strftime('%H:%M:%S %d/%m/%Y')%></td>
     </tr>
     <% end %>
   </tbody>
