--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+  <%= link_to "Deaths", home_deaths_path %>
+  <%= link_to "Confirmed", home_confirmed_path %>
+  <%= link_to "Recovered", home_recovered_path %>
   <div class="container my-5">
     <%= yield %>
   </div>
